--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dye Cloud</title>
+    <meta name="og:title" content="Dye Cloud" />
+    <meta name="og:description" content="Powered by Ratata" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/logo.svg" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Dye Cloud</title>
-	<meta name="og:title" content="Dye Cloud">
-	<meta name="og:description" content="Powered by Ratata">
-</head>
-
-<body>
-	<div id="app"></div>
-	<script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
